--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,7 +4,7 @@
 
 #main-content-secondary
   .col-1-2
-    .section#exciting-news
+    .col-1.section#exciting-news
       .container.skin-dark.darker
         .body
           %h3
@@ -12,9 +12,21 @@
           %div
             :textile
               #{@homepage.exciting_news}
-    .clear
   
-    .col-1
+    .col-2
+      %h3.container.skin-dark.darker
+        .body
+          = image_tag('/images/home/featured_video.png', :alt => 'Featured Video')
+      .section#featured-video
+        .container
+          - if @featured_video.present?
+            = render :partial => 'videos/video_thumb', :locals => { :video => @featured_video }
+
+            .body.additional-content
+              - if @featured_video_description
+                %p.video_description= @featured_video_description
+            
+              = link_to('See more videos...', videos_path, :class => 'box')
       %h3.container.skin-dark.darker
         .body
           = image_tag('/images/home/top_picks.png', :alt => 'Tonights Top Picks')
@@ -33,20 +45,6 @@
                     %span.location= link_to(show.venue.name, show.venue)
               = link_to('See more shows...', shows_path, :class => 'box')
     
-    .col-2
-      %h3.container.skin-dark.darker
-        .body
-          = image_tag('/images/home/featured_video.png', :alt => 'Featured Video')
-      .section#featured-video
-        .container
-          - if @featured_video.present?
-            = render :partial => 'videos/video_thumb', :locals => { :video => @featured_video }
-
-            .body.additional-content
-              - if @featured_video_description
-                %p.video_description= @featured_video_description
-            
-              = link_to('See more videos...', videos_path, :class => 'box')
     .clear
   
   .col-3
