--- a/public/stylesheets/sass/pages/home.scss
+++ b/public/stylesheets/sass/pages/home.scss
@@ -22,14 +22,17 @@
         padding-top: 5px;
       }
     }
+    .col-1-2 {
+      margin-top:220px;
+    }
     #exciting-news {
-      float: right;
-      width: 385px; 
-      margin-bottom: 40px;
-      margin-top: 20px;
-      .body {
-        padding-bottom: 10px;
-      }
+      //float: right;
+      //width: 385px; 
+      //margin-bottom: 40px;
+      //margin-top: 20px;
+      //.body {
+      //  padding-bottom: 10px;
+      //}
     }
     #featured-video .body {
       padding: 5px;
