--- a/app/views/admin/shows/_form.html.haml
+++ b/app/views/admin/shows/_form.html.haml
@@ -1,4 +1,16 @@
 = semantic_form_for [:admin, show] do |f|
+  - if start_batch?
+    = hidden_field_tag :start_batch, true
+
+    .instructions
+      %h4 What is Batch Mode?
+      %p.mb10
+        Batch mode is for entering multiple shows that share the same information. Use the form below to enter that share information and it will be auto-populated for all new shows until you choose to stop batch editing.
+      %p.mb10 
+        For example: if all of the shows you have to enter are at the same venue and have the same cover charge, enter those in the form below and press 'Start batch entry' at the bottom of the page..mb10
+      %p.mb10 
+        You can stop batch entry at any time by clicking the 'Stop batch entry' link in the sidebar.
+
   = f.inputs do
     = f.input :venue, :input_html => {:'data-placeholder' => 'Select a venue...', :class => 'chzn-select'}
     = f.input :group_name
@@ -8,11 +20,10 @@
     = f.input :search_and_restore
     = f.input :featured
 
-  - if show.performances.empty?
-    - 3.times do
-      - show.performances.build
-      - show.performances.last.build_artist
-      - show.performances.last.build_instrument
+  - 5.times do
+    - show.performances.build
+    - show.performances.last.build_artist
+    - show.performances.last.build_instrument
 
   %h3 Performances
   = f.semantic_fields_for :performances do |p|
@@ -27,11 +38,17 @@
       = p.semantic_fields_for :instrument, Instrument.new do |i|
         = i.input :name, :label => 'Add a New Instrument', :input_html => { :placeholder => 'Instrument Name' }
 
-  - 5.times { show.videos.build }
+  - 3.times { show.videos.build }
+
   %h3 Videos
   = f.semantic_fields_for :videos do |v|
     = v.inputs do
       = v.input :title, :hint => 'If left blank, this will be automatically populated from the title of the vimeo video. It can be edited afterwards.'
       = v.input :url, :hint => 'Paste the vimeo link here; e.g. http://vimeo.com/25519509' 
 
-  = f.buttons
+  - if start_batch?
+    = f.buttons do
+      = f.commit_button 'Start batch entry'
+
+  - else
+    = f.buttons
