--- a/public/stylesheets/admin/active_admin.css
+++ b/public/stylesheets/admin/active_admin.css
@@ -108,6 +108,9 @@ p {
     margin: 1.5em 0 1.5em 1.5em;
     padding: 0; }
 
+
+.mb10 {margin-bottom:10px;}
+
 .left {
   float: left !important; }
 
