--- a/app/views/admin/shows/_form.html.haml
+++ b/app/views/admin/shows/_form.html.haml
@@ -28,15 +28,15 @@
   %h3 Performances
   = f.semantic_fields_for :performances do |p|
     = p.inputs do
-      = p.input :artist, :label => 'Existing Artist', :input_html => { :'data-placeholder' => 'Choose an artist', :class => 'chzn-select chzn-select-with-new', :style => 'float:left;' },:label_html => {:style => 'float:left;width:150px;'}, :wrapper_html => {:style => 'float:left;'}
+      = p.input :artist, :label => 'Existing Artist', :input_html => { :'data-placeholder' => 'Choose an artist', :class => 'chzn-select chzn-select-with-new', :style => 'float:left;' },:label_html => {:style => 'float:left;width:150px;'}, :wrapper_html => {:style => 'float:left;height:29px;'}
 
       = p.semantic_fields_for :artist, Artist.new do |a|
-        = a.input :name, :label => 'Add a New Artist', :input_html => { :placeholder => 'Artist Name', :style => 'float:left;width:350px;' },:label_html => {:style => 'float:left;width:150px;'}, :wrapper_html => {:style => 'float:left;width:600px;'}
+        = a.input :name, :label => 'Add a New Artist', :input_html => { :placeholder => 'Artist Name', :style => 'float:left;width:350px;' },:label_html => {:style => 'float:left;width:150px;'}, :wrapper_html => {:style => 'float:left;width:600px;height:29px;'}
 
-      = p.input :instrument, :label => 'Existing Instrument', :input_html => { :'data-placeholder' => 'Choose an instrument...', :class => 'chzn-select chzn-select-with-new', :style => 'float:left' }, :label_html => {:style => 'float:left;width:150px;'}, :wrapper_html => {:style => 'float:left;'}
+      = p.input :instrument, :label => 'Existing Instrument', :input_html => { :'data-placeholder' => 'Choose an instrument...', :class => 'chzn-select chzn-select-with-new', :style => 'float:left' }, :label_html => {:style => 'float:left;width:150px;'}, :wrapper_html => {:style => 'float:left;height:29px;'}
 
       = p.semantic_fields_for :instrument, Instrument.new do |i|
-        = i.input :name, :label => 'Add a New Instrument', :input_html => { :placeholder => 'Instrument Name', :style => 'float:left;width:350px;' }, :label_html => {:style => 'float:left;width:150px;'}, :wrapper_html => {:style => 'float:left;width:600px;'}
+        = i.input :name, :label => 'Add a New Instrument', :input_html => { :placeholder => 'Instrument Name', :style => 'float:left;width:350px;' }, :label_html => {:style => 'float:left;width:150px;'}, :wrapper_html => {:style => 'float:left;width:600px;height:29px;'}
       %div{:style => 'clear:both;'}
 
   - 3.times { show.videos.build }
