--- a/app/views/application/_player.html.haml
+++ b/app/views/application/_player.html.haml
@@ -15,8 +15,7 @@
       %h3 Featured Artists
       %ul.inline-list
         - show.performances.each do |performance|
-          %li= link_to_if(performance.artist.live?, "#{performance.artist.name} (#{performance.instrument.present? ? performance.instrument.name : performance.artist.instrument.name})",
-            performance.artist, :class => 'box')
+          %li= performance_link(performance, :class => 'box')
 
   - if show.videos.count > 1
     %h3.pl10 More videos from this show:
