*MIGRATION* adds link groups (resources) to admin and front end

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,7 +40,7 @@
           %li#nav-about
             %a{:href => '/home/about'} About
           %li#nav-resources
-            %a{:href => '/home/resources'} Resources
+            %a{:href => resources_path} Resources
           %li#nav-donate
             %a{:href => '/home/donate'} Donate
     .site-container#main-content
