moves about to /about from /home/about

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,7 +38,7 @@
           %li#nav-video
             = link_to('Video', videos_path)
           %li#nav-about
-            %a{:href => '/home/about'} About
+            %a{:href => about_path} About
           %li#nav-resources
             %a{:href => resources_path} Resources
           %li#nav-donate
