--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,7 +42,7 @@
           %li#nav-resources
             %a{:href => resources_path} Resources
           %li#nav-donate
-            %a{:href => '/home/donate'} Donate
+            %a{:href => donate_path} Donate
     .site-container#main-content
       = content_for?(:content) ? yield(:content) : yield
       .clear
