--- a/public/stylesheets/sass/components/links.scss
+++ b/public/stylesheets/sass/components/links.scss
@@ -1,7 +1,13 @@
 .jazz {
-  a {
+  a, button.link {
     cursor: pointer;
     text-decoration: none;
+  }
+  button.link {
+    background: transparent;
+    border: none;
+    margin: 0px;
+    padding: 0px;
   }
   .box {
     color: #fff;
