--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -49,7 +49,6 @@
 
     = javascript_include_tag ['jquery-5.1.min.js', 'jquery-ui-1.8.13.custom.min.js', 'jquery.cmtextconstrain.js']
 
-
     - if @truncate_bio
       :javascript
         $('#bio').cmtextconstrain({
@@ -188,3 +187,16 @@
             return false;
           });
         });
+
+    - if Rails.env.production?
+      :javascript
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-26371854-1']);
+        _gaq.push(['_setDomainName', '.searchandrestore.com']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
