--- a/app/views/videos/_video_thumb.html.haml
+++ b/app/views/videos/_video_thumb.html.haml
@@ -4,9 +4,11 @@
 - venue            = video.show.venue.try(:name)
 - title            = (group_name + " - " + date + (venue ? (" @ " + venue) : ""))
 
+- unless defined?(thumbnail); thumbnail = :tiny; end
+
 %a.block.video-thumb{ :href => video_path(video, video_url_params), :title => title, :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code } }
   .body
-    = image_tag(video.thumbnail.url(:tiny), :alt => title)
+    = image_tag(video.thumbnail.url(thumbnail), :alt => title)
     .clear
     %span.box.block.name
       %span= group_name 
