update page title to Search & Restore

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Searchandrestore
+    %title Search &amp; Restore
     = stylesheet_link_tag 'base'
     - if @uses_datepicker
       = stylesheet_link_tag 'jquery_ui'
