changes about images

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -2,7 +2,7 @@
 
 .col-1
   .section
-    = image_tag('/images/about.png')
+    = image_tag('/images/about.jpg')
   = render :partial => 'shared/mailing_list'
 .col-2
   .container
