--- a/public/stylesheets/sass/components/containers.scss
+++ b/public/stylesheets/sass/components/containers.scss
@@ -11,7 +11,7 @@
         padding-bottom: 20px;
       }
       &.darker {
-        background: url(/images/black_container_bg_darker.png);
+        //background: url(/images/black_container_bg_darker.png);
       }
     }
     &.with-tip {
