adds wrap class in css

--- a/public/stylesheets/sass/components/links.scss
+++ b/public/stylesheets/sass/components/links.scss
@@ -31,6 +31,9 @@
       text-align: center;
       padding: 0px;
     }
+    &.wrap {
+      white-space:normal;
+    }
   }
   span.box.block {
     span {
