--- a/public/stylesheets/pages/home.css
+++ b/public/stylesheets/pages/home.css
@@ -33,3 +33,5 @@
     margin-bottom: 0px; }
 .jazz.page-home #intro a.box {
   width: 210px; }
+.jazz.page-home #mailing-list .body {
+  padding-top: 5px; }
