reorients mailing list links

--- a/app/views/shared/_mailing_list.html.haml
+++ b/app/views/shared/_mailing_list.html.haml
@@ -23,7 +23,7 @@
             #mc-error-response.response{ :style => 'display: none;' }
             #mc-success-response.response{ :style => 'display: none;' }
 
-          .actions.clear.floatright
+          .actions.clear.floatleft
             = submit_tag('subscribe', :id => 'mc-embedded-subscribe', :class => 'button')
-            = link_to 'unsubscribe', 'http://SearchAndRestore.us1.list-manage1.com/unsubscribe?u=303dcaaa45addeada91b6a5e3&id=dc362c84a7', :target => '_blank'
+            = link_to 'unsubscribe', 'http://SearchAndRestore.us1.list-manage1.com/unsubscribe?u=303dcaaa45addeada91b6a5e3&id=dc362c84a7', :target => '_blank', :class => 'box'
           .clear
