--- a/public/stylesheets/sass/components/forms.scss
+++ b/public/stylesheets/sass/components/forms.scss
@@ -4,7 +4,7 @@
     padding: 0;
     margin: 0;
 
-    .actions a {color:$ORANGE;}
+    //.actions a {color:$ORANGE;}
   }
   .field {
     margin-bottom: 20px;
