mailing list uses :

--- a/app/views/shared/_mailing_list.html.haml
+++ b/app/views/shared/_mailing_list.html.haml
@@ -1,7 +1,7 @@
 .section.snug#mailing-list
   .container.skin-dark
     .body
-      %h3 Join our mailing list.
+      %h3 Join our mailing list:
       = form_tag 'http://SearchAndRestore.us1.list-manage.com/subscribe/post?u=303dcaaa45addeada91b6a5e3&id=dc362c84a7', :method => 'post', :id => 'mc-embedded-subscribe-form', :name => 'mc-embedded-subscribe-form', :class => 'validate', :target => '_blank' do
         %fieldset
           .field.text.mc-field-group
