style changes to featured musicians

--- a/public/stylesheets/sass/pages/shows.scss
+++ b/public/stylesheets/sass/pages/shows.scss
@@ -29,6 +29,9 @@
         padding-bottom:0px;
         margin-bottom:5px;
         &.featured-musician {
+          color:#666;
+          margin-bottom:0;
+          line-height:14px;
           a.box {
             font-weight:normal;
           }
