changes padding for search listing

--- a/public/stylesheets/sass/pages/shows.scss
+++ b/public/stylesheets/sass/pages/shows.scss
@@ -25,6 +25,9 @@
       h3 {
         margin-bottom:3px;
       }
+      &> .container .body {
+        padding: 5px 10px 10px 10px;
+      }
       ul li {
         padding-bottom:0px;
         margin-bottom:5px;
